<resources>
    <string name="app_name">401-Project-Restaurant</string>
    <string name="name_entry">Marie McSoccer</string>
    <string name="password_entry">********</string>
    <string name="email_entry">marie@gmail.com</string>
    <string name="phonenumber_entry">7141234567</string>
    <string name="editname_entry">Marie McSoccer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discounts">Discounts</string>
    <string name="saveChangesButtonText">Save Changes</string>
</resources>
