<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserAccount">

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="126dp"-->
<!--            android:layout_height="118dp"-->
<!--            android:layout_marginStart="140dp"-->
<!--            android:layout_marginLeft="140dp"-->
<!--            android:layout_marginTop="28dp"-->
<!--            android:background="@drawable/img_border"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:srcCompat="@drawable/jennaheadshot" />-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="155dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
            android:src="@drawable/jennaheadshot"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="170dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:fontFamily="@font/balthazar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_entry" />

        <EditText
            android:id="@+id/nameEntryText"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/textview_useraccount_border"
            android:ems="10"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:text="@string/editname_entry"
            android:textColor="@color/borderGrey"
            app:fontFamily="@font/balthazar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/textview_useraccount_border"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password_entry"
            android:textColor="@color/borderGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginBottom="280dp"
            android:background="@drawable/textview_useraccount_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email_entry"
            android:textColor="@color/borderGrey"
            app:fontFamily="@font/balthazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginBottom="345dp"
            android:background="@drawable/textview_useraccount_border"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phonenumber_entry"
            android:textColor="@color/borderGrey"
            app:fontFamily="@font/balthazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/enableLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginBottom="200dp"
            android:text="Enable location services"
            android:textColor="@color/borderGrey"
            android:textSize="22sp"
            app:fontFamily="@font/balthazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginBottom="196dp"
            android:thumbTint="@color/appYellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="316dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginBottom="120dp"
            android:thumbTint="@color/appYellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/milesOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginBottom="92dp"
            android:text="0 miles"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:fontFamily="@font/balthazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/milesTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="92dp"
            android:text="50 miles"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:fontFamily="@font/balthazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>